Retirando os bancos de dados sqlite do versionamento

--- a/Marren.Banking.Application/appsettings.json
+++ b/Marren.Banking.Application/appsettings.json
@@ -8,7 +8,7 @@
   },
   "Marren": {
     "BankingDBType": "sqlite",
-    "BankingDBConnectionString": "Data Source=Testes.db"
+    "BankingDBConnectionString": "Data Source=MarrenBanking.db"
   },
   "AllowedHosts": "*"
 }
